process-service/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: process-service
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: process-service
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8080
