process-service/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-process-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout http_502 http_503 http_504"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "0"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "0"
#    nginx.ingress.kubernetes.io/upstream-keepalive-requests: "1000000"
#    nginx.ingress.kubernetes.io/max-worker-connections: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: ingress-nginx-controller.ingress-nginx
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: process-service
                port:
                  number: 80
